// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MaskedTextInput /> should render correctly without a mask 1`] = `
<TextInput
  allowFontScaling={true}
  autoCapitalize="sentences"
  onChangeText={[Function]}
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontStyle": undefined,
        "fontWeight": undefined,
        "textDecorationLine": undefined,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value="with space and special* characters;"
/>
`;

exports[`<MaskedTextInput /> should renders correctly with currency mask 1`] = `
<TextInput
  allowFontScaling={true}
  autoCapitalize="sentences"
  onChangeText={[Function]}
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontStyle": undefined,
        "fontWeight": undefined,
        "textDecorationLine": undefined,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value="$0.00"
/>
`;

exports[`<MaskedTextInput /> should renders correctly with custom mask 1`] = `
<TextInput
  allowFontScaling={true}
  autoCapitalize="sentences"
  maxLength={7}
  onChangeText={[Function]}
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontStyle": undefined,
        "fontWeight": undefined,
        "textDecorationLine": undefined,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
  value=""
/>
`;
